added few files
made few changes and added few files

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 /*-----------------------------------------------------------------------------------
 
-Theme Name: Gerold - Personal Portfolio HTML5 Template
+Theme Name: Nikhil Gupta Portfolio
 Theme URI: https://themejunction.net/html/gerold/demo/
 Author: Theme-Junction
 Author URI: https://themeforest.net/user/theme-junction
@@ -1860,6 +1860,8 @@ body.loaded {
 .resume-section .resume-item {
 	margin-right: 100px;
 }
+
+
 .resume-widget .resume-item {
 	position: relative;
 	padding: 20px 30px;
